Fix the holding past XPCOM shutdown of an nsTimerManager in a static nsCOMPtr.  r=jag  sr=shaver  b=43589